# thin-merge

./: Cargo.toml  Makefile  README.md
man8/: thin_merge.txt
src/: lib.rs  mapping_iterator.rs  merge.rs  stream.rs
tests/: thin_merge.rs
tests/common/: common_args.rs  input_arg.rs  mod.rs  target.rs  thin.rs
tests/tools/: verifier.rs
