[package]
name = "thin-merge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", default-features = false, features = [
  "std",
  "help",
  "usage",
  "error-context",
  "suggestions",
] }
exitcode = "1.1.2"
thinp = { git = "https://github.com/mingnus/thin-provisioning-tools.git", branch = "2024-04-23-vectored-write", features = ["io_uring"] }
