[package]
name = "thin-merge"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", default-features = false, features = [
  "std",
  "help",
  "usage",
  "error-context",
  "suggestions",
] }
exitcode = "1.1.2"
thinp = { git = "https://github.com/jthornber/thin-provisioning-tools.git", tag = "v1.0.13", features = ["io_uring"] }

[dev-dependencies]
duct = "0.13"
libc = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
tempfile = "3.6"

[features]
no_cleanup = []

[profile.release]
debug = true
